<resources>
    <string name="app_name">EBook</string>
    <string name="explore">Explore</string>
    <string name="parasecren">Dive into a World of Engaging Reads..</string>
    <string name="read_ease">Read Ease</string>
    <string name="redbk">Read Your Favourite Books.</string>
    <string name="seconpara">Access your favourite books anytime, anywhere. Enjoy endless reading at your fingertips.</string>
    <string name="next">Next</string>
    <string name="interactive_audiobooks">Interactive Audiobooks</string>
    <string name="paratwo">Experience stories like never before with engaging audio and interactive elements.</string>
    <string name="redinlov">Keep Reading You will Fall in love</string>
    <string name="lvpara"><![CDATA[Discover your next favourite read and fall in love with our curated library]]></string>
    <string name="get_start">Get Start</string>
    <string name="siintopic">Access thousands of e-books, customize your reading experience.</string>
    <string name="welcome">Welcome...!</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="bookpara">When Tate Collins meets airline pilot Miles Archer, she knows it isn’tlove at first sight.
        They wouldn’teven go so far as to consider themselves friends. The only thing Tate and Miles have in common
        is an undeniable mutual attraction.Once their desires are out in the open, they realize they have the perfect
        set-up. He doesn’t want love, she doesn’t have time for love,so that just leaves the .
        Their arrangement could be surprisingly seamless, as long as Tate
        can stick to the only two rules Miles has for her.</string>
</resources>