<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/third"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    android:padding="16dp"
    tools:context=".FirstPage">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="468dp"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logone"
            android:layout_width="207dp"
            android:layout_height="218dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/read_ease"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/secondary"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/parasecren"
            android:textColor="@color/secondary"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnexplore"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/secondary"
            android:padding="12dp"
            android:text="@string/explore"
            android:fontFamily="@font/inriaserif"


            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>