<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regbk"
    android:padding="16dp"
    tools:context=".Signup">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/primary"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.5"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/reglogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"

            android:background="@drawable/fillbox"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:fontFamily="@font/inika"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/secondary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UserName"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:textColor="@color/secondary" />
            <!-- Email Input Field -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:inputType="textEmailAddress"
                android:padding="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textColor="@color/secondary" />

            <!-- Password Input Field -->
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="12dp"
                android:background="@drawable/border"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="17sp"
                android:gravity="end"

                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/secondary"
                />
            <!-- Sign In Button -->
            <Button
                android:id="@+id/buttonlog"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/primary"
                android:padding="12dp"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="@color/secondary"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>